Update ToolTip colors and spacing to match updated design and add light mode

--- a/airbyte-webapp/src/components/ToolTip/ToolTip.module.scss
+++ b/airbyte-webapp/src/components/ToolTip/ToolTip.module.scss
@@ -7,21 +7,27 @@
 }
 
 .toolTip {
-  display: none;
+  position: absolute;
   font-size: 14px;
   line-height: initial;
-  position: absolute;
-  padding: 9px 8px 8px;
-  box-shadow: 0 24px 38px rgba(53, 53, 66, 0.14), 0 9px 46px rgba(53, 53, 66, 0.12), 0 11px 15px rgba(53, 53, 66, 0.2);
+  padding: variables.$spacing-md;
   border-radius: 4px;
-  background: rgba(26, 26, 33, 0.9);
-  color: colors.$white;
   top: calc(100% + 10px);
   left: -50px;
   min-width: 100px;
   width: max-content;
   max-width: 380px;
   z-index: variables.$z-tooltip;
+  display: none;
+
+  box-shadow: 0px 2px 4px rgba(colors.$dark-blue, 0.12);
+  background: rgba(colors.$dark-blue, 0.9);
+  color: colors.$white;
+
+  &.light {
+    background: rgba(colors.$white, 0.9);
+    color: colors.$dark-blue;
+  }
 
   div:hover > &,
   &:hover {
