Add minor tweaks to Tooltip component

--- a/airbyte-webapp/src/components/ToolTip/ToolTip.module.scss
+++ b/airbyte-webapp/src/components/ToolTip/ToolTip.module.scss
@@ -11,7 +11,7 @@
   line-height: initial;
 
   padding: variables.$spacing-md;
-  margin: variables.$spacing-md;
+  margin: variables.$spacing-sm;
   border-radius: 4px;
   min-width: 100px;
   max-width: 380px;
